@@ -4,7 +4,6 @@ import io.leego.rpa.config.RpaProperties;
 import io.leego.rpa.constant.Constants;
 import io.leego.rpa.converter.MessageConverter;
 import io.leego.rpa.entity.App;
-import io.leego.rpa.entity.BaseEntity;
 import io.leego.rpa.entity.Dict;
 import io.leego.rpa.entity.QApp;
 import io.leego.rpa.entity.QTask;
@@ -40,7 +39,6 @@ import io.leego.rpa.util.QPredicate;
 import io.leego.rpa.util.Result;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.BeanUtils;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -54,9 +52,9 @@ import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.function.Function;
-import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
 /**
@@ -85,7 +83,7 @@ public class RpaServiceImpl implements RpaService {
 
     @Override
     public Result<AppVO> getApp(String id) {
-        return Result.buildSuccess(appRepository.findById(id).map(this::toVO).orElse(null));
+        return Result.buildSuccess(appRepository.findById(id).map(AppVO::from).orElse(null));
     }
 
     @Override
@@ -95,7 +93,7 @@ public class RpaServiceImpl implements RpaService {
                 .and(QApp.app.name::startsWith, dto.getName())
                 .and(QApp.app.createdTime::between, dto.getBeginCreatedTime(), dto.getEndCreatedTime())
                 .and(QApp.app.status::eq, AppStatus.ENABLED.getCode());
-        return Result.buildSuccess(appRepository.findAll(predicate, dto).map(this::toVO));
+        return Result.buildSuccess(appRepository.findAll(predicate, dto).map(AppVO::from));
     }
 
     @Override
@@ -103,22 +101,15 @@ public class RpaServiceImpl implements RpaService {
     public Result<List<AppVO>> saveApps(AppSaveDTO dto) {
         List<App> apps = dto.getApps()
                 .stream()
-                .map(o -> {
-                    App app = new App(o.getName(), AppStatus.ENABLED.getCode());
-                    if (StringUtils.hasText(o.getId())) {
-                        app.setId(o.getId());
-                        app.makeUpdatable();
-                    }
-                    return app;
-                })
+                .map(o -> new App(o.getId(), o.getName(), o.getLogo(), AppStatus.ENABLED.getCode(), null, null))
                 .collect(Collectors.toList());
         appRepository.saveAll(apps);
-        return Result.buildSuccess(apps.stream().map(this::toVO).collect(Collectors.toList()));
+        return Result.buildSuccess(apps.stream().map(AppVO::from).collect(Collectors.toList()));
     }
 
     @Override
-    public Result<UserVO> getUser(String id) {
-        return Result.buildSuccess(userRepository.findById(id).map(this::toVO).orElse(null));
+    public Result<UserVO> getUser(Long id) {
+        return Result.buildSuccess(userRepository.findById(id).map(UserVO::from).orElse(null));
     }
 
     @Override
@@ -132,7 +123,7 @@ public class RpaServiceImpl implements RpaService {
                 .and(QUser.user.company::startsWith, dto.getCompany())
                 .and(QUser.user.createdTime::between, dto.getBeginCreatedTime(), dto.getEndCreatedTime())
                 .and(QUser.user.status::eq, UserStatus.ENABLED.getCode());
-        return Result.buildSuccess(userRepository.findAll(predicate, dto).map(this::toVO));
+        return Result.buildSuccess(userRepository.findAll(predicate, dto).map(UserVO::from));
     }
 
     @Override
@@ -148,24 +139,17 @@ public class RpaServiceImpl implements RpaService {
         }
         List<User> users = dto.getUsers()
                 .stream()
-                .map(o -> {
-                    User user = new User(
-                            o.getAppId(), o.getAccount(), o.getNickname(), o.getRealname(), o.getCompany(),
-                            o.getPhone(), o.getAvatar(), UserStatus.ENABLED.getCode());
-                    if (StringUtils.hasText(o.getId())) {
-                        user.setId(o.getId());
-                        user.makeUpdatable();
-                    }
-                    return user;
-                })
+                .map(o -> new User(o.getId(), o.getAppId(),
+                        o.getAccount(), o.getNickname(), o.getRealname(), o.getCompany(),
+                        o.getPhone(), o.getAvatar(), UserStatus.ENABLED.getCode(), null, null))
                 .collect(Collectors.toList());
         userRepository.saveAll(users);
-        return Result.buildSuccess(users.stream().map(this::toVO).collect(Collectors.toList()));
+        return Result.buildSuccess(users.stream().map(UserVO::from).collect(Collectors.toList()));
     }
 
     @Override
-    public Result<TaskVO> getTask(String id) {
-        return Result.buildSuccess(taskRepository.findById(id).map(this::toVO).orElse(null));
+    public Result<TaskVO> getTask(Long id) {
+        return Result.buildSuccess(taskRepository.findById(id).map(TaskVO::from).orElse(null));
     }
 
     @Override
@@ -180,19 +164,19 @@ public class RpaServiceImpl implements RpaService {
                 .and(QTask.task.executedTime::between, dto.getBeginExecutedTime(), dto.getEndExecutedTime())
                 .and(QTask.task.finishedTime::between, dto.getBeginFinishedTime(), dto.getEndFinishedTime())
                 .and(QTask.task.createdTime::between, dto.getBeginCreatedTime(), dto.getEndCreatedTime());
-        return Result.buildSuccess(taskRepository.findAll(predicate, dto).map(this::toVO));
+        return Result.buildSuccess(taskRepository.findAll(predicate, dto).map(TaskVO::from));
     }
 
     @Override
     @Transactional
     public Result<List<TaskVO>> saveTasks(TaskSaveDTO dto) {
         // Return error if any task already exists
-        List<String> taskIds = dto.getTasks().stream().map(TaskSaveDTO.TaskDTO::getId).filter(StringUtils::hasText).collect(Collectors.toList());
+        List<Long> taskIds = dto.getTasks().stream().map(TaskSaveDTO.TaskDTO::getId).filter(Objects::nonNull).collect(Collectors.toList());
         if (!CollectionUtils.isEmpty(taskIds) && taskRepository.existsByIdIn(taskIds)) {
             return Result.buildFailure(ErrorCode.TASK_PRESENT);
         }
         // Find and verify users
-        List<String> userIds = dto.getTasks().stream().map(TaskSaveDTO.TaskDTO::getUserId).distinct().collect(Collectors.toList());
+        List<Long> userIds = dto.getTasks().stream().map(TaskSaveDTO.TaskDTO::getUserId).distinct().collect(Collectors.toList());
         List<User> users = userRepository.findAllById(userIds);
         if (userIds.size() != users.size()) {
             return Result.buildFailure(ErrorCode.USER_ABSENT);
@@ -201,7 +185,7 @@ public class RpaServiceImpl implements RpaService {
             return Result.buildFailure(ErrorCode.USER_DISABLED);
         }
         // user_id -> app_id
-        Map<String, String> userIdAppIdMap = users.stream().collect(Collectors.toMap(BaseEntity::getId, User::getAppId));
+        Map<Long, String> userIdAppIdMap = users.stream().collect(Collectors.toMap(User::getId, User::getAppId));
         // dict_type = task_type:${app_id}
         List<String> dictTypes = users.stream().map(User::getAppId).distinct().map(o -> Constants.TASK_TYPE_PREFIX + o).collect(Collectors.toList());
         // app_id -> task_type -> task_priority
@@ -225,12 +209,9 @@ public class RpaServiceImpl implements RpaService {
                 .map(o -> {
                     String appId = userIdAppIdMap.get(o.getUserId());
                     Task task = new Task(
-                            appId, o.getUserId(), o.getType(), TaskStatus.CREATED.getCode(),
+                            o.getId(), appId, o.getUserId(), o.getType(), TaskStatus.CREATED.getCode(),
                             o.getPriority(), o.getData(), null, null,
-                            o.getScheduleTime(), null, null);
-                    if (StringUtils.hasText(o.getId())) {
-                        task.setId(o.getId());
-                    }
+                            o.getScheduleTime(), null, null, null, null);
                     if (task.getScheduleTime() == null) {
                         task.setScheduleTime(LocalDateTime.now());
                     }
@@ -244,7 +225,7 @@ public class RpaServiceImpl implements RpaService {
                 })
                 .collect(Collectors.toList());
         taskRepository.saveAll(tasks);
-        return Result.buildSuccess(tasks.stream().map(this::toVO).collect(Collectors.toList()));
+        return Result.buildSuccess(tasks.stream().map(TaskVO::from).collect(Collectors.toList()));
     }
 
     @Override
@@ -259,7 +240,7 @@ public class RpaServiceImpl implements RpaService {
                     task.setStatus(TaskStatus.DELETED.getCode());
                 }
             }
-            result.add(toVO(task));
+            result.add(TaskVO.from(task));
         });
         return Result.buildSuccess(result);
     }
@@ -287,7 +268,7 @@ public class RpaServiceImpl implements RpaService {
         List<ClientCacheDTO> caches = values.stream()
                 .filter(o -> o instanceof ClientCacheDTO)
                 .map(o -> (ClientCacheDTO) o)
-                .collect(Collectors.toList());
+                .toList();
         if (CollectionUtils.isEmpty(caches)) {
             return Result.buildSuccess(Page.empty());
         }
@@ -295,13 +276,13 @@ public class RpaServiceImpl implements RpaService {
                 .map(ClientCacheDTO::getAccount)
                 .filter(StringUtils::hasText)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
         List<User> users = userRepository.findByAccountIn(accounts);
         // app_id -> account -> user
         Map<String, Map<String, User>> userMap = CollectionUtils.isEmpty(accounts)
                 ? Collections.emptyMap()
                 : users.stream().collect(Collectors.groupingBy(User::getAppId, Collectors.mapping(Function.identity(), Collectors.toMap(User::getAccount, Function.identity()))));
-        List<ClientVO> clients = caches.stream().map(o -> toVO(o, userMap.getOrDefault(o.getAppId(), Collections.emptyMap()).get(o.getAccount()))).collect(Collectors.toList());
+        List<ClientVO> clients = caches.stream().map(o -> ClientVO.from(o, userMap.getOrDefault(o.getAppId(), Collections.emptyMap()).get(o.getAccount()))).collect(Collectors.toList());
         return Result.buildSuccess(Page.of(clients));
     }
 
@@ -323,38 +304,5 @@ public class RpaServiceImpl implements RpaService {
                 TaskStatus.class.getSimpleName(), Option.of(TaskStatus.values(), TaskStatus::getCode, o -> messageConverter.convert(o.getName())),
                 ClientStatus.class.getSimpleName(), Option.of(ClientStatus.values(), ClientStatus::getCode, o -> messageConverter.convert(o.getName())),
                 ErrorCode.class.getSimpleName(), Option.of(ErrorCode.values(), ErrorCode::getCode, o -> messageConverter.convert(o.getMessage()))));
-    }
-
-    private AppVO toVO(App app) {
-        return copyProperties(app, AppVO::new);
-    }
-
-    private UserVO toVO(User user) {
-        return copyProperties(user, UserVO::new);
-    }
-
-    private TaskVO toVO(Task task) {
-        return copyProperties(task, TaskVO::new);
-    }
-
-    private ClientVO toVO(ClientCacheDTO client, User user) {
-        ClientVO vo = copyProperties(client, ClientVO::new);
-        if (user != null) {
-            vo.setUserId(user.getId());
-            vo.setNickname(user.getNickname());
-            vo.setRealname(user.getRealname());
-            vo.setCompany(user.getCompany());
-            vo.setPhone(user.getPhone());
-            vo.setAvatar(user.getAvatar());
-        }
-        return vo;
-    }
-
-    private <T> T copyProperties(Object source, Supplier<T> factory) {
-        T target = factory.get();
-        if (source != null) {
-            BeanUtils.copyProperties(source, target);
-        }
-        return target;
     }
 }
